SERVER-76172 Fix BalancerChunkSelection unit test on slow build variants

(cherry picked from commit bd5f609fe3381a01caf17913acf5bb890f3e3185)